<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/dialog_background"
    android:id="@+id/layoutDialogContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"

            app:cardElevation="10dp"
            android:padding="20dp"
            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/robotobold"
                    android:textColor="@color/navheadcol"
                    android:text="@string/deletetext" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/no"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_popup_btn"
                        android:text="@string/negative"
                        android:textColor="@color/navheadcol"
                        android:layout_weight=".50" />

                    <Button
                        android:id="@+id/yes"
                        android:layout_width="0dp"
                        android:layout_alignParentBottom="true"
                        android:textColor="@color/navheadcol"
                        android:layout_height="wrap_content"
                        android:text="@string/positive"
                        android:background="@drawable/custom_popup_btn"
                        android:layout_weight=".50" />

                </LinearLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</LinearLayout>