<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/dialog_background"
    android:layout_height="match_parent"
    tools:context=".EditQuestion">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/set_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Edit New Question"
        android:background="@color/categorytextcolor"
        app:titleTextColor="@color/cardtxt"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="4dp"
        app:navigationIcon="@drawable/backwardarrow" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            app:cardElevation="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="40dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotobold"
                android:hint="@string/question"
                android:padding="20dp"
                android:textColorHint="@color/navheadcol"
                android:textSize="16dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            app:cardElevation="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="320dp"
            >

            <TextView
                android:id="@+id/option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:fontFamily="@font/robotobold"
                android:hint="@string/option1"
                android:textSize="14dp"
                android:textColorHint="@color/navheadcol"
                />




        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            app:cardElevation="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="400dp"
            >

            <TextView
                android:id="@+id/option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:fontFamily="@font/robotobold"
                android:hint="@string/option2"
                android:textSize="14dp"
                android:textColorHint="@color/navheadcol"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            app:cardElevation="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="480dp"
            >

            <TextView
                android:id="@+id/option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:fontFamily="@font/robotobold"
                android:hint="@string/option3"
                android:textSize="14dp"
                android:textColorHint="@color/navheadcol"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            app:cardElevation="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="560dp"
            >

            <TextView
                android:id="@+id/option4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:fontFamily="@font/robotobold"
                android:hint="@string/option4"
                android:textSize="14dp"
                android:textColorHint="@color/navheadcol"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="630dp"
            android:layout_marginRight="40dp"
            app:cardBackgroundColor="@color/navheadcol"
            app:cardElevation="10dp"
            app:cardCornerRadius="25dp" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/breeserifregular"
                    android:text="@string/update"
                    android:textColor="@color/categorytextcolor"
                    android:textSize="25dp"
                    android:padding="10dp"
                    android:layout_centerHorizontal="true"
                    />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


