<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="153dp"
        android:layout_marginTop="129dp"
        android:layout_marginEnd="153dp"
        app:srcCompat="@drawable/splashlogo" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="@font/robotoregular"
        android:hint="@string/prompt_email"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="36dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="@font/robotoregular"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="16dp" />



    <androidx.cardview.widget.CardView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="490dp"
        android:layout_marginRight="50dp"
        app:cardBackgroundColor="@color/navheadcol"
        app:cardElevation="10dp"
        app:cardCornerRadius="25dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/log">

            <TextView
                android:id="@+id/logintext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/breeserifregular"
                android:padding="10dp"
                android:text="@string/title_activity_login"
                android:textColor="@color/categorytextcolor"
                android:textSize="25dp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>