<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background"
    android:id="@+id/layoutDialogContainer"
    tools:context=".success_popup">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:cardElevation="10dp"
            android:padding="20dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    app:srcCompat="@drawable/menuclosing" />



                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/breeserifregular"
                    android:textSize="25dp"
                    android:textColor="@color/navheadcol"
                    android:text="@string/winnerslogan" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/breeserifregular"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="110dp"
                    android:text="@string/score"
                    android:textColor="@color/navheadcol"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/breeserifregular"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="160dp"
                    android:text="3/3"
                    android:textColor="@color/red"
                    android:textSize="16dp" />

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/donebtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="210dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="50dp"
                app:cardBackgroundColor="@color/navheadcol"
                app:cardElevation="10dp"
                app:cardCornerRadius="25dp" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/breeserifregular"
                        android:text="@string/done"
                        android:textColor="@color/categorytextcolor"
                        android:textSize="25dp"
                        android:padding="5dp"
                        android:layout_centerHorizontal="true"
                        />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>



        </androidx.cardview.widget.CardView>




    </RelativeLayout >

</RelativeLayout>




